@@ -1,3 +1,7 @@
+2007-01-17  Sven Schuetz
+	* providerMgr.c:
+	2nd fix for 1636805: ain does not work for indication subscriptions
+
 2007-01-16  Sven Schuetz
 
 	* interopProvider.c, internalProvider.h:
